testsuite/gnatprove/tests/SB21-007__crash/test.out
a-cofuve.ads:96:06: info: data dependencies proved, in instantiation at a-cfdlli.ads:74, in instantiation at database.adb:7
database.adb:7:04: error: "Item" is not writable
database.adb:7:04: error: instantiation error at a-cfdlli.ads:74
database.adb:7:04: error: instantiation error at a-cofuve.ads:339
database.adb:7:04: error: object was declared as not writable at a-cofuve.ads:339, instance at a-cfdlli.ads:74, instance at line 7
database.adb:12:04: info: initialization of "Database" proved
database.adb:13:04: info: initialization of "DB_Model" proved
database.ads:23:04: error: "Item" is not writable
database.ads:23:04: error: instantiation error at a-cofuse.ads:252
database.ads:23:04: error: object was declared as not writable at a-cofuse.ads:252, instance at line 23
gnatprove: error during flow analysis and proof
